@@ -74,7 +74,7 @@ class Groups_Admin_Notice {
 	 * Hooked on the admin_init action.
 	 */
 	public static function admin_init() {
-		if ( current_user_can( 'activate_plugins' ) ) {
+		if ( Groups_User::current_user_can( 'activate_plugins' ) ) {
 			$user_id = get_current_user_id();
 			if ( !empty( $_GET[self::HIDE_REVIEW_NOTICE] ) && wp_verify_nonce( $_GET['groups_notice'], 'hide' ) ) {
 				add_user_meta( $user_id, self::HIDE_REVIEW_NOTICE, true );
