@@ -30,7 +30,7 @@ if ( !defined( 'ABSPATH' ) ) {
  */
 function groups_admin_groups_remove( $group_id ) {
 
-	if ( !current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
+	if ( !Groups_User::current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
 		wp_die( __( 'Access denied.', 'groups' ) );
 	}
 
@@ -76,7 +76,7 @@ function groups_admin_groups_remove_submit() {
 
 	$result = false;
 
-	if ( !current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
+	if ( !Groups_User::current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
 		wp_die( __( 'Access denied.', 'groups' ) );
 	}
 
@@ -101,7 +101,7 @@ function groups_admin_groups_bulk_remove() {
 
 	$output = '';
 
-	if ( !current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
+	if ( !Groups_User::current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
 		wp_die( __( 'Access denied.', 'groups' ) );
 	}
 
@@ -166,7 +166,7 @@ function groups_admin_groups_bulk_remove() {
 function groups_admin_groups_bulk_remove_submit() {
 
 	$result = array();
-	if ( !current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
+	if ( !Groups_User::current_user_can( GROUPS_ADMINISTER_GROUPS ) ) {
 		wp_die( __( 'Access denied.', 'groups' ) );
 	}
 
